fix z-index

--- a/src/app/css/app.css
+++ b/src/app/css/app.css
@@ -1,6 +1,6 @@
 .body {
-    background: rgb(14,13,19);
-    background: linear-gradient(99deg, rgba(14,13,19,1) 0%, rgba(58,78,94,1) 100%);
+    background: rgb(14, 13, 19);
+    background: linear-gradient(99deg, rgba(14, 13, 19, 1) 0%, rgba(58, 78, 94, 1) 100%);
     background-attachment: fixed;
     width: 100%;
     height: auto;
@@ -9,7 +9,7 @@
 }
 
 .container {
-    z-index: 36;
+    z-index: 10;
     height: screen;
     width: 100%;
     position: relative;
@@ -27,7 +27,7 @@
 
 .body .Wave-1 {
     animation: animate 5s linear infinite;
-    z-index: 35;
+    z-index: 7;
     opacity: 0.03;
     animation-delay: 5s;
     bottom: 0;
@@ -43,7 +43,7 @@
 
 .body .Wave-2 {
     animation: animate2 15s linear infinite;
-    z-index: 34;
+    z-index: 6;
     opacity: 0.02;
     animation-delay: 2s;
     bottom: -10px;
@@ -59,7 +59,7 @@
 
 .body .Wave-3 {
     animation: animate3 30s linear infinite;
-    z-index: 30;
+    z-index: 5;
     opacity: 0.01;
     animation-delay: -10s;
     bottom: -15px;
@@ -73,14 +73,14 @@
     }
 }
 
-
-#nav-mobile{
-
-    z-index: 1000;
-
+#nav-mobile {
+    z-index: 100;
 }
 
-#navbar{
+#navbar {
+    z-index: 100;
+}
 
-    z-index: 1000;
+.sosial {
+    z-index: 30;
 }
